tests/errors/2014-1.vb
'#compiler-options:/optionstrict:xxx
'#compiler-message:Command line error BC2014 : the value 'xxx' is invalid for option 'optionstrict'
'#exit-code:1